# GIT_AUTO_CHECKER

./: .gitignore  Cargo.toml  README.md  code.md  codex.md  config.toml
src/: config.rs  credentials.rs  error.rs  git_auth.rs  lib.rs  main.rs  notifier.rs
src/db/: mod.rs  models.rs
src/executor/: codex.rs
src/jobs/: git_review.rs  mod.rs  test_gen.rs
src/mcp/: client.rs  mod.rs  protocol.rs
src/mcp/tools/: git.rs
src/prompts/: test_gen.md
src/scheduler/: mod.rs
src/web/: admin.rs  auth.rs  messages.rs  middleware.rs  mod.rs
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  types.ts
web/src/api/: admin.ts  auth.ts  client.ts  messages.ts
web/src/components/: AppHeader.vue  ConfirmDialog.vue  EmptyState.vue  MessageCard.vue  MessageDetail.vue  ToastViewport.vue  UnreadBadge.vue
web/src/components/admin/: AdminLayout.vue
web/src/router/: index.ts
web/src/stores/: auth.ts  messages.ts  ui.ts
web/src/styles/: globals.css
web/src/utils/: date.ts  tasks.ts
web/src/views/: ActivateView.vue  LoginView.vue  MessagesView.vue
web/src/views/admin/: CredentialEditor.vue  Credentials.vue  Dashboard.vue  RepoEditor.vue  Repos.vue  RunDetail.vue  Runs.vue  TaskCreator.vue  TaskDetail.vue  TaskEditor.vue  Tasks.vue  UserEditor.vue  Users.vue
