[package]
name = "git-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
cron = "0.15"
git2 = { version = "0.20", default-features = false, features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
hex = "0.4"
jsonwebtoken = "9.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = "=0.3.36"
tokio = { version = "1.44", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.14"
